# redoc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TODO.md  TODO.txt  docker-compose.yml  mkdocs.yml  pyproject.toml
ansible/: playbook.yml  requirements.txt
docs/: ai.md  api.md  features.md  index.md  installation.md  quick-start.md  templates.md
docs/overrides/: main.html
examples/: basic_usage.py
examples/advanced/: README.md  main.py  requirements.txt  test.py
examples/advanced/templates/: report.html
examples/basic/: Dockerfile  Makefile  README.md  main.py  requirements.txt  test.py
examples/cli/: README.md  main.py  requirements.txt  test_cli.py
examples/cli/data/: invoice_data.json
examples/cli/templates/: invoice.html
examples/invoice/: README.md  demo.py  invoice_template.html  models.py  requirements.txt
examples/invoice/data/: sample_invoice.json
examples/invoice/templates/: invoice.html
examples/web/: README.md  main.py  requirements.txt  test_web.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/ai/: index.html
site/api/: index.html
site/features/: index.html
site/installation/: index.html
site/quick-start/: index.html
site/search/: search_index.json
site/templates/: index.html
src/redoc/: __init__.py  cli.py  core.py  exceptions.py
src/redoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/redoc/converters/: __init__.py  docx_converter.py  epub_converter.py  html_converter.py  json_converter.py  pdf_converter.py  xml_converter.py
src/redoc/ocr/: __init__.py  processor.py
src/redoc/templates/: base.py  pdf_handler.py
src/redoc/utils/: __init__.py
tests/: __init__.py  conftest.py
