[tool.poetry]
name = "redoc"
version = "0.2.0"
description = "Universal document converter with template support, OCR, and AI-powered processing. Convert between PDF, DOCX, HTML, XML, JSON, EPUB and more with a simple CLI or Python API."
long-description = "README.md"
long-description-content-type = "text/markdown"
authors = ["Tom Sapletta <info@softreck.dev>"]
maintainers = ["Tom Sapletta <info@softreck.dev>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/text2doc/redoc"
repository = "https://github.com/text2doc/redoc"
documentation = "https://text2doc.github.io/redoc"
keywords = [
    "document-converter", "pdf", "docx", "html", "xml", "json", "epub", 
    "ocr", "template-engine", "document-processing", "ai", "llm", "ollama",
    "mistral", "cli-tool", "automation", "productivity", "document-generation",
    "data-extraction", "template-processing", "batch-processing", "document-automation",
    "office-automation", "document-parsing", "pdf-generation", "report-generation",
    "document-management"
]
classifiers = [
    # Development Status
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    
    # License
    "License :: OSI Approved :: Apache Software License",
    
    # Operating System
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    
    # Python Versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    
    # Topics
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Filters",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: System :: Software Distribution",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Documentation",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Printing"
]
packages = [{include = "redoc", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

# Project URLs for PyPI
[tool.poetry.urls]
"Homepage" = "https://github.com/text2doc/redoc"
"Documentation" = "https://text2doc.github.io/redoc"
"Changelog" = "https://github.com/text2doc/redoc/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/text2doc/redoc/issues"
"Source Code" = "https://github.com/text2doc/redoc"
"Download" = "https://pypi.org/project/redoc/#files"
"Discussions" = "https://github.com/text2doc/redoc/discussions"
"Gitter" = "https://gitter.im/text2doc/redoc"
"Twitter" = "https://twitter.com/text2doc"

# Core dependencies
requests = "^2.31.0"
pydantic = "^2.5.0"
click = "^8.1.7"
      
# Document processing
python-docx = {version = "^1.1.0", optional = true}
pypdf = {version = "^3.17.0", optional = true}
lxml = {version = "^5.1.0"
      
# CLI and output formatting
rich = {extras = ["all"]}
pyyaml = "^6.0.1"
tabulate = "^1.0.0"
      
# Template and data processing
jinja2 = "^3.1.2"
pathlib = "^1.0.1"
dataclasses-json = "^0.6.3"
      
# Type hints and utilities
typing-extensions = "^4.8.0"
python-dotenv = "^1.0.0"
python-multipart = {version = "^0.0.6", optional = true}
      
# Optional dependencies for specific features
fastapi = {version = "^0.104.0", optional = true}
uvicorn = {version = "^0.24.0", optional = true}
      
# Documentation
mkdocs-material = {extras = ["imaging"], version = "^9.6.14", optional = true}
mkdocs-material-extensions = {version = "^1.3.1", optional = true}
      
# PDF and image processing
pdf2image = {version = "^1.17.0", optional = true}
pillow = {version = "^10.2.0", optional = true}
      
# Optional AI/ML features
openai = {version = "^1.3.0", optional = true}
      
# Optional CLI enhancements
rich-click = {version = "^1.7.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.12.0"
pre-commit = "^3.6.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.8"
jupyterlab = "^4.0.9"
ipython = "^8.17.2"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.21.1"
pytest-xdist = "^3.5.0"
pytest-benchmark = "^4.0.0"
responses = "^0.24.1"
factory-boy = "^3.3.0"
faker = "^20.1.0"
freezegun = "^1.2.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.8"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
mkdocs-material-extensions = "^1.3.1"
mkdocs-minify-plugin = "^0.8.0"

[tool.poetry.scripts]
redoc = "redoc.cli:main"
redoc-cli = "redoc.cli:cli"
redoc-shell = "redoc.cli:shell"
redoc-api = "redoc.api:main"

[tool.poetry.extras]
# Core functionality
cli = [
    "click>=8.1.7",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "rich-click>=1.7.0"
]

# Document processing
docs = [
    "python-docx>=0.8.11",
    "pypdf>=3.0.0",
    "lxml>=4.9.0",
    "pdf2image>=1.16.0",
    "pillow>=10.0.0"
]

# Web and API
server = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6"
]

# AI and ML features
ai = [
    "openai>=1.0.0",
    "numpy>=1.24.0",
      "scikit-learn>=1.3.0"
]

# Development and testing
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0"
]

# Documentation
docs = [
    "mkdocs-material>=9.0.0",
      "mkdocstrings[python]>=0.20.0"
]

# All features
all = [
    "redoc[cli]",
    "redoc[docs]",
    "redoc[server]",
    "redoc[ai]",
    "redoc[dev]"
]
]
export = [
    "jinja2",
    "markdown",
    "pandoc"
]
cloud = [
    "boto3",
    "azure-storage-blob",
    "google-cloud-storage"
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "black",
    "flake8",
    "mypy",
    "isort",
    "pre-commit",
    "sphinx",
    "sphinx-rtd-theme",
    "mkdocs",
    "mkdocs-material"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["redoc"]
known_third_party = ["click", "rich", "pydantic", "requests"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --import-mode=importlib --strict-markers --strict-config --doctest-modules --cov=redoc --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
norecursedirs = [".git", ".tox", ".mypy_cache", ".pytest_cache", "__pycache__", "build", "dist"]
filterwarnings = ["error", "ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/conftest.py",
    "*/setup.py",
]

[tool.coverage.report]
# Project URLs
[project.urls]
Homepage = "https://github.com/text2doc/redoc"
Documentation = "https://text2doc.github.io/redoc"
Changelog = "https://github.com/text2doc/redoc/blob/main/CHANGELOG.md"
Issues = "https://github.com/text2doc/redoc/issues"
Source = "https://github.com/text2doc/redoc"

# Badges for PyPI and documentation
[project.optional-dependencies]
badges = [
    "![Python Version](https://img.shields.io/badge/python-3.9%2B-blue.svg",
    "![License](https://img.shields.io/badge/license-Apache%202.0-blue.svg)",
      "![Build Status](https://github.com/text2doc/redoc/actions/workflows/tests.yml/badge.svg)",
      "![PyPI Version](https://img.shields.io/pypi/v/redoc.svg)",
      "![PyPI Downloads](https://img.shields.io/pypi/dm/redoc.svg)",
      "![Code Coverage](https://img.shields.io/codecov/c/github/text2doc/redoc"
]

# Tool configurations
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP",  # pyupgrade
    "PL",  # pylint
    "RUF",  # ruff-specific rules
]

# Exclude common patterns from coverage
[tool.coverage.run]
source = ["redoc"]
omit = [
    "**/tests/**",
    "**/__main__.py",
    "**/__init__.py",
    "**/version.py",
]

# Exclude common patterns from coverage reporting
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG":
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (black handles this)
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101,S105,S106",
]



# Additional project metadata
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/text2doc/redoc/issues"
"Changelog" = "https://github.com/text2doc/redoc/blob/main/CHANGELOG.md"
"Discussions" = "https://github.com/text2doc/redoc/discussions"
"Documentation" = "https://text2doc.github.io/redoc"

# Custom build configuration
[tool.poetry.build]
generate-setup-file = false