[project]
name = "redoc"
version = "0.2.3"
description = "Universal document converter with template support, OCR, and AI-powered processing. Convert between PDF, DOCX, HTML, XML, JSON, EPUB and more with a simple CLI or Python API."
readme = "README.md"
authors = [
    {name = "Tom Sapletta", email = "info@softreck.dev"}
]
maintainers = [
    {name = "Tom Sapletta", email = "info@softreck.dev"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.9,<4.0"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "click>=8.1.7",
    "rich[all]>=13.0.0",
    "pyyaml>=6.0.1",
    "tabulate>=0.9.0,<1.0.0",  # Using latest available version
    "jinja2>=3.1.2",
    "pathlib>=1.0.1",
    "dataclasses-json>=0.6.3",
    "typing-extensions>=4.8.0",
    "python-dotenv>=1.0.0",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "reportlab (>=4.4.1,<5.0.0)"
]

[project.optional-dependencies]
# Optional dependencies for specific features
python-docx = ["python-docx>=1.1.0"]
pypdf = ["pypdf>=3.17.0"]
lxml = ["lxml>=5.1.0"]
python-multipart = ["python-multipart>=0.0.6"]
fastapi = ["fastapi>=0.104.0"]
uvicorn = ["uvicorn>=0.24.0"]
mkdocs = ["mkdocs-material[imaging]>=9.6.14"]
mkdocs-extensions = ["mkdocs-material-extensions>=1.3.1"]
pdf2image = ["pdf2image>=1.17.0"]
pillow = ["pillow>=10.2.0"]
openai = ["openai>=1.3.0"]

# Feature groups
cli = [
    "rich-click>=1.7.0"
]

server = [
    "fastapi",
    "uvicorn",
    "python-multipart"
]

ai = [
    "openai",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0"
]

cloud = [
    "boto3>=1.28.0",
    "azure-storage-blob>=12.17.0",
    "google-cloud-storage>=2.10.0"
]

export = [
    "markdown>=3.4.0",
    "pandoc>=2.3.0"
]

# Development dependencies
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "isort>=5.12.0",
    "pre-commit>=3.6.0",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
    "jupyterlab>=4.0.9",
    "ipython>=8.17.2",
    "pytest-asyncio>=0.21.1",
    "pytest-xdist>=3.5.0",
    "pytest-benchmark>=4.0.0",
    "responses>=0.24.1",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
    "freezegun>=1.2.2",
    "mkdocstrings[python]>=0.29.1",
    "mkdocs-minify-plugin>=0.8.0"
]

[project.scripts]
redoc = "redoc.cli:main"
redoc-cli = "redoc.cli:cli"
redoc-shell = "redoc.cli:shell"
redoc-api = "redoc.api:main"

[project.urls]
homepage = "https://github.com/text2doc/redoc"
repository = "https://github.com/text2doc/redoc"
documentation = "https://text2doc.github.io/redoc"
changelog = "https://github.com/text2doc/redoc/blob/main/CHANGELOG.md"
bug-tracker = "https://github.com/text2doc/redoc/issues"
source = "https://github.com/text2doc/redoc"
download = "https://pypi.org/project/redoc/#files"
discussions = "https://github.com/text2doc/redoc/discussions"



[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["redoc"]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["redoc"]
known_third_party = ["click", "rich", "pydantic", "requests"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
